[package]
name = "files"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Library target: the app's state + draw path (incl. the syscall-free
# `render_preview` / `preview_state_demo`) so the host screenshot harness can
# link and render the LIVE Files draw path with no kernel.
[lib]
name = "files"
path = "src/lib.rs"

# Binary target: the freestanding userspace ELF (`_start` -> `files::run()`).
# `exec_path = "files"` in the start-menu manifest resolves to this.
[[bin]]
name = "files"
path = "src/main.rs"
# The bin is a freestanding `#![no_main]` ELF shim — it has no libtest entry
# point, so exclude it from `cargo test` (otherwise the host test build tries to
# link it as a test exe and fails LNK1561 "entry point must be defined"). The
# host KAT lives entirely in the LIBRARY target.
test = false

[features]
# Forwards to `athkit/host`: lets the std `tools/ui_screenshot` harness link
# `files` (-> `athkit`) to render the LIVE Files surface via the syscall-free
# `files::render_preview` seam, without athkit's bare-ELF lang items colliding
# with std (E0152 duplicate panic_impl). The normal
# `cargo build -p files --target x86_64-unknown-none` ELF leaves this off and is
# unchanged.
host = ["athkit/host"]

[dependencies]
athgfx = { path = "../../components/athgfx" }
athkit = { path = "../../components/athkit" }
ath_tokens = { path = "../../components/ath_tokens" }
ath_files = { path = "../../components/ath_files" }
ath_diff = { path = "../../components/ath_diff" }
ath_zip = { path = "../../components/ath_zip" }
ath_tar = { path = "../../components/ath_tar" }
ath_deflate = { path = "../../components/ath_deflate" }
athmedia = { path = "../../components/athmedia" }
ath_gif = { path = "../../components/ath_gif" }
ath_csv = { path = "../../components/ath_csv" }
ath_hash = { path = "../../components/ath_hash" }
ath_mime = { path = "../../components/ath_mime" }
ath_toml = { path = "../../components/ath_toml" }
# Magic-byte content sniffer (never trust the extension) — the dispatch entry for
# the document/preview open path.
ath_formats = { path = "../../components/ath_formats" }
# Document/preview engines: open PDFs (text extraction), DOCX (paragraphs/
# headings/tables), XLSX (CSV grid), and the unified image decoder
# (PNG/JPEG/BMP/GIF/WebP -> ARGB8888) used for image preview.
ath_pdf = { path = "../../components/ath_pdf" }
ath_docx = { path = "../../components/ath_docx" }
ath_xlsx = { path = "../../components/ath_xlsx" }
ath_image = { path = "../../components/ath_image" }
# AthBridge handoff codec — the proven per-process Windows-app launch channel
# (components/athbridge/src/handoff.rs). Files double-clicking a `.exe` writes the
# launch target to `handoff::HANDOFF_PATH` then spawns `athbridge_run`, which
# loads that PE as its OWN AthenaOS process (commit d5db628). We CONSUME the
# handoff codec here (rule 7: reuse, never twin) — no parallel encoder.
athbridge = { path = "../../components/athbridge" }
