[package]
name = "music"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
raegfx = { path = "../../components/raegfx" }
raekit = { path = "../../components/raekit" }
rae_tokens = { path = "../../components/rae_tokens" }
raemedia = { path = "../../components/raemedia" }
rae_toml = { path = "../../components/rae_toml" }
