[package]
name = "photos"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Library target: the app's state + draw path + the syscall-free decode-dispatch
# (`decode_oriented`) so a host KAT can link the LIVE image decoders (ath_image +
# ath_gif) with no kernel. This is the structure `apps/files` / `apps/passwords`
# use.
[lib]
name = "photos"
path = "src/lib.rs"

# Binary target: the freestanding userspace ELF (`_start` -> `photos::run()`).
# `exec_path = "photos"` in the start-menu manifest resolves to this.
[[bin]]
name = "photos"
path = "src/main.rs"
# The bin is a freestanding `#![no_main]` ELF shim — it has no libtest entry
# point, so exclude it from `cargo test` (otherwise the host test build tries to
# link it as a test exe and fails). The host KAT lives in the LIBRARY target.
test = false

[features]
# Forwards to `athkit/host`: lets the std `cargo test` harness link `photos`
# (-> `athkit`) without athkit's bare-ELF lang items colliding with std (E0152
# duplicate panic_impl). The normal `cargo build -p photos --target
# x86_64-unknown-none` ELF leaves this off and is unchanged. The host KAT runs
# with `cargo test -p photos --features host`.
host = ["athkit/host"]

[dependencies]
athgfx = { path = "../../components/athgfx" }
athkit = { path = "../../components/athkit" }
ath_tokens = { path = "../../components/ath_tokens" }
athmedia = { path = "../../components/athmedia" }
ath_gif = { path = "../../components/ath_gif" }
ath_toml = { path = "../../components/ath_toml" }
# Magic-byte content sniffer + unified still-image decoder
# (PNG/JPEG/BMP/GIF/WebP -> ARGB8888). The single still-image "open any image"
# front door now shared with the Files app: Photos sniffs by magic bytes and
# dispatches through one path (BMP + WebP join the existing PNG/JPEG). Animated
# GIFs still route to `ath_gif` directly for the multi-frame animation loop.
ath_image = { path = "../../components/ath_image" }
