[package]
name = "sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Library target: the app's state + draw path + the syscall-free SYNC MODEL
# (`SyncApp`) so a host KAT can link the LIVE zero-knowledge `athsync` E2E core
# (device enroll, group-key wrap/unwrap, SyncBlob encrypt/decrypt, LWW-register
# CRDT merge) with NO kernel and NO network — the same structure apps/vpn,
# apps/mail and apps/browser use.
[lib]
name = "sync"
path = "src/lib.rs"

# Binary target: the freestanding userspace ELF (`_start` -> `sync::run()`).
# `exec_path = "sync"` in the start-menu manifest resolves to this.
[[bin]]
name = "sync"
path = "src/main.rs"
# The bin is a freestanding `#![no_main]` ELF shim — no libtest entry point, so
# exclude it from `cargo test` (otherwise the host test build tries to link it as
# a test exe and fails). The host KAT lives entirely in the LIBRARY target.
test = false

[features]
# Forwards to `athkit/host`: lets the std `cargo test` harness link `sync`
# (-> `athkit`) without athkit's bare-ELF lang items colliding with std (E0152
# duplicate panic_impl). The normal `cargo build -p sync --target
# x86_64-unknown-none` ELF leaves this off and is unchanged. The host KAT runs
# with `cargo test -p sync --features host`.
host = ["athkit/host"]

[dependencies]
athgfx = { path = "../../components/athgfx" }
athkit = { path = "../../components/athkit" }
ath_tokens = { path = "../../components/ath_tokens" }
# The LIVE, already-host-KAT'd zero-knowledge sync core: ed25519+x25519 device
# identities, per-device wrapped group keys (ECDH+HKDF+AEAD), the AEAD+ed25519
# `SyncBlob` envelope (all the server ever sees), and the LWW-register CRDT with
# deterministic convergence. This app is the clickable shell over it. The crate
# opens NO sockets and has NO athnet dep — the live transport is a
# `cfg(not(test))` wrapper the host KAT never links, so the host proof needs no
# network.
athsync = { path = "../../components/athsync" }
